ml-common-vpc-template-rds-cloudformation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc2903a14c": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "sample-vpc"
          }
        ]
      }
    },
    "subnet5759880e": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "ap-northeast-1c",
        "VpcId": {
          "Ref": "vpc2903a14c"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "sample-vpc-public"
          }
        ]
      }
    },
    "subnet3e969c5c": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "AvailabilityZone": "ap-northeast-1a",
        "VpcId": {
          "Ref": "vpc2903a14c"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "sample-vpc-public"
          }
        ]
      }
    },
    "subneta5c779d2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.4.0/24",
        "AvailabilityZone": "ap-northeast-1b",
        "VpcId": {
          "Ref": "vpc2903a14c"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "sample-vpc-private"
          }
        ]
      }
    },
    "subnet06969c64": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": "ap-northeast-1a",
        "VpcId": {
          "Ref": "vpc2903a14c"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "sample-vpc-private"
          }
        ]
      }
    },
    "subnet7a598823": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.3.0/24",
        "AvailabilityZone": "ap-northeast-1c",
        "VpcId": {
          "Ref": "vpc2903a14c"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "sample-vpc-private"
          }
        ]
      }
    },
    "igw0a18d96f": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "sample-vpc-gateway"
          }
        ]
      }
    },
    "dopt6d3d360f": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "ap-northeast-1.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "acle613a583": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc2903a14c"
        }
      }
    },
    "rtb9c67d4f9": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc2903a14c"
        }
      }
    },
    "rtbfc66d599": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc2903a14c"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "sample-route-table"
          }
        ]
      }
    },
    "rdssamplerds": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AllocatedStorage": "5",
        "AllowMajorVersionUpgrade": "false",
        "AutoMinorVersionUpgrade": "true",
        "DBInstanceClass": "db.t2.micro",
        "Port": "3306",
        "StorageType": "standard",
        "BackupRetentionPeriod": "7",
        "MasterUsername": "dbmaster",
        "MasterUserPassword": "MyPassword",
        "PreferredBackupWindow": "14:46-15:16",
        "PreferredMaintenanceWindow": "tue:14:09-tue:14:39",
        "DBName": "MyDatabase",
        "Engine": "mysql",
        "EngineVersion": "5.6.23",
        "LicenseModel": "general-public-license",
        "DBSubnetGroupName": {
          "Ref": "dbsubnetsampledbsubnet"
        },
        "DBParameterGroupName": {
          "Ref": "dbpgmlrdsparam"
        },
        "VPCSecurityGroups": [
          {
            "Ref": "sgsampledbsecuritygroup"
          }
        ],
        "Tags": [
          {
            "Key": "workload-type",
            "Value": "other"
          }
        ]
      }
    },
    "rdssamplerdsmultiaz": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AllocatedStorage": "5",
        "AllowMajorVersionUpgrade": "false",
        "AutoMinorVersionUpgrade": "true",
        "DBInstanceClass": "db.t2.micro",
        "Port": "3306",
        "StorageType": "standard",
        "BackupRetentionPeriod": "7",
        "MasterUsername": "dbmaster",
        "MasterUserPassword": "MyPassword",
        "PreferredBackupWindow": "16:58-17:28",
        "PreferredMaintenanceWindow": "wed:19:15-wed:19:45",
        "DBName": "MyDatabase",
        "Engine": "mysql",
        "EngineVersion": "5.6.23",
        "LicenseModel": "general-public-license",
        "MultiAZ": "true",
        "DBSubnetGroupName": {
          "Ref": "dbsubnetsampledbsubnet"
        },
        "VPCSecurityGroups": [
          {
            "Ref": "sgsampledbsecuritygroup"
          }
        ],
        "Tags": [
          {
            "Key": "workload-type",
            "Value": "production"
          }
        ]
      }
    },
    "dbsubnetsampledbsubnet": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "sample db subnet",
        "SubnetIds": [
          {
            "Ref": "subnet06969c64"
          },
          {
            "Ref": "subnet7a598823"
          },
          {
            "Ref": "subneta5c779d2"
          }
        ]
      }
    },
    "dbpgmlrdsparam": {
      "Type": "AWS::RDS::DBParameterGroup",
      "Properties": {
        "Description": "monstar rds db param",
        "Family": "mysql5.6",
        "Parameters": {
          "binlog_cache_size": "32768",
          "binlog_format": "MIXED",
          "character_set_client": "utf8mb4",
          "character_set_connection": "utf8mb4",
          "character_set_database": "utf8mb4",
          "character_set_results": "utf8mb4",
          "character_set_server": "utf8mb4",
          "explicit_defaults_for_timestamp": "1",
          "innodb_buffer_pool_size": "{DBInstanceClassMemory*3/4}",
          "innodb_file_per_table": "1",
          "innodb_flush_method": "O_DIRECT"
        }
      }
    },
    "sgsampledbsecuritygroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "sample db security group",
        "VpcId": {
          "Ref": "vpc2903a14c"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "sample-db-security-group"
          }
        ]
      }
    },
    "dbsgrdssecsg": {
      "Type": "AWS::RDS::DBSecurityGroup",
      "Properties": {
        "GroupDescription": "rds security group",
        "DBSecurityGroupIngress": [
          {
            "CIDRIP": "10.0.0.0/24"
          },
          {
            "CIDRIP": "10.0.1.0/24"
          }
        ]
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acle613a583"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acle613a583"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acle613a583"
        },
        "SubnetId": {
          "Ref": "subnet5759880e"
        }
      }
    },
    "subnetacl2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acle613a583"
        },
        "SubnetId": {
          "Ref": "subnet7a598823"
        }
      }
    },
    "subnetacl3": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acle613a583"
        },
        "SubnetId": {
          "Ref": "subnet06969c64"
        }
      }
    },
    "subnetacl4": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acle613a583"
        },
        "SubnetId": {
          "Ref": "subneta5c779d2"
        }
      }
    },
    "subnetacl5": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acle613a583"
        },
        "SubnetId": {
          "Ref": "subnet3e969c5c"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc2903a14c"
        },
        "InternetGatewayId": {
          "Ref": "igw0a18d96f"
        }
      }
    },
    "subnetroute2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtbfc66d599"
        },
        "SubnetId": {
          "Ref": "subnet3e969c5c"
        }
      }
    },
    "subnetroute3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtbfc66d599"
        },
        "SubnetId": {
          "Ref": "subnet5759880e"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtbfc66d599"
        },
        "GatewayId": {
          "Ref": "igw0a18d96f"
        }
      },
      "DependsOn": "gw1"
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc2903a14c"
        },
        "DhcpOptionsId": {
          "Ref": "dopt6d3d360f"
        }
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsampledbsecuritygroup"
        },
        "IpProtocol": "tcp",
        "FromPort": "3306",
        "ToPort": "3306",
        "SourceSecurityGroupId": "sg-c2a0cba7",
        "SourceSecurityGroupOwnerId": "930359825941"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsampledbsecuritygroup"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "common vpc template & rds single & rds multi-az for monstar lab"
}
